Altered style to use bootstrap for mobile views.

--- a/luckyfeast/potlucks/templates/potlucks/desktop/event_details.html
+++ b/luckyfeast/potlucks/templates/potlucks/desktop/event_details.html
@@ -1,8 +1,11 @@
 {% include "potlucks/navbar.html" %}
 {% load static %}
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="{% static 'potlucks/main.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'potlucks/table-list.css' %}">
-<div class="main">
+<div class="container-fluid" style="padding-top: 70px;">
 <h1>{{ event.name }} Details</h1>
 {% if request.user != event.host %}
 <div class="table-list" >
@@ -39,35 +42,40 @@
 {% endif %}
 
 <!--DISPLAY EVENT PARAMETERS HERE-->
-<div style="width: 100%; display:block;">
-<div style="width: 15%; position:relative; float: left;">
+<div class="container">
+<div class="row">
+<div class="col-xs-4 col-sm-2">
 <h3>Address</h3>
 {{ event.address }}
 </div>
-<div style="width: 15%; position:relative; float:left;">
+<div class="col-xs-4 col-sm-2">
 <h3>City</h3>
 {{ event.city }}
 </div>
-<div style="width: 15%;position:relative; float: left;">
+<div class="col-xs-4 col-sm-2">
 <h3>Zip</h3>
 {{ event.zipcode }}
 </div>
-<div style="width: 25%;position:relative; float: left">
+<div class="clearfix visible-xs"></div>
+<div class="col-xs-6 col-sm-3">
 <h3>Start</h3>
 {{ event.start_time }}
 </div>
-<div style="width: 30%;position:relative; float: left">
+<div class="col-xs-6 col-sm-3">
 <h3>End</h3>
 {{ event.end_time }}
 </div>
 </div>
-
+</div>
 
 
 <!--TABLE DISPLAY FOR DISH ASSIGNMENT LIST-->
-<div class="table-list" id="dish_table" style="margin-top:20px; float: left; width: 50%;">
-<h2>This is the dish assignment list</h2>
+<div class="row">
+<div class="col-sm-6">
+<div class="table-list" id="dish_table">
+<h2>Dishes</h2>
 <table>
+    <tr><th>Dish Type</th><th>Assigned?</th></tr>
 {% for dish in event.assignment_set.all %}
     <tr>
     <td>{{ dish.dish_type }}</td>
@@ -82,10 +90,11 @@
         {% csrf_token %}
         <input type="hidden" name="event_id" value="{{ event.pk }}" />
         <input type="hidden" name="dish_id" value="{{ dish.pk }}" />
-        <td><input type="submit" value="Remove Dish" /></td>
+        <td><input type="submit" value="Remove" /></td>
         </form>
+    {% else %}
+        <td><input type="radio" name="dish_id" class="dishRadio" value="{{ dish.pk }}" /></td>
     {% endif %}
-    <td><input type="radio" name="dish_id" class="dishRadio" value="{{ dish.pk }}" /></td>
     </tr>
 {% endfor %}
 </table>
@@ -101,11 +110,14 @@
 {% endif %}
 </form>
 </div>
+</div>
 
 <!--TABLE DISPLAY FOR GUEST LIST-->
-<div class="table-list" id="guest_table" style="margin-top: 20px; float: left; width: 50%;">
-<h2>This is the guest list</h2>
+<div class="col-sm-6">
+<div class="table-list" id="guest_table">
+<h2>Guests</h2>
 <table>
+    <tr><th>Guest</th><th>Going?</th></tr>
 {% for guest in event.guest_instance_set.all %}
     <tr>
     <td>{% if guest.guest %}{{ guest.guest.username }}{% else %}{{ guest.email }}{% endif %}</td>
@@ -121,7 +133,8 @@
     </form>
 {% endif %}
 </div>
-
+</div>
+</div>
 </div>
 
 <script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js'></script>
