--- a/luckyfeast/potlucks/templates/potlucks/desktop/user_login.html
+++ b/luckyfeast/potlucks/templates/potlucks/desktop/user_login.html
@@ -1,8 +1,11 @@
 {% include "potlucks/navbar.html" %}
 {% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'potlucks/forms.css' %}">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="{% static 'potlucks/main.css' %}">
-<div class="main">
+<link rel="stylesheet" type="text/css" href="{% static 'potlucks/forms.css' %}">
+<div class="container" style="padding-top: 70px;">
 <h1>Login</h1>
 <h3><a href="{% url 'potlucks:user_register' %}">New User? Register here!</a></h3>
 <!--Check for error message and display-->
