--- a/luckyfeast/potlucks/templates/potlucks/desktop/event_add_guests.html
+++ b/luckyfeast/potlucks/templates/potlucks/desktop/event_add_guests.html
@@ -1,22 +1,25 @@
 {% load static %}
 {% include "potlucks/navbar.html" %}
 <html>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="{% static 'potlucks/main.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'potlucks/forms.css' %}">
+<div class="container" style="padding-top: 70px">
 <h1>Invite guests to {{ event.name }}</h1>
 <div class="forms">
 <form action="{% url 'potlucks:event_enter_guest' %}" method="POST">
 {% csrf_token %}
 <input type="hidden" name="id" value="{{ event.pk }}" />
 <ul>
-    <li><b>Email:
-    <div class="forms-help-key">?</b>
-    <div class="forms-help">Enter the email address of the guest you would like to invite</div></div><br>
+    <li><b>Email:</b><br>
     <input type="text" name="email" />
     </li>
     <li>
     <input type="submit" value="Invite Guest" />
     </li>
 </ul>
+</div>
 </div>
 </html>
