--- a/luckyfeast/potlucks/templates/potlucks/desktop/event_from_key.html
+++ b/luckyfeast/potlucks/templates/potlucks/desktop/event_from_key.html
@@ -1,8 +1,11 @@
 {% include "potlucks/navbar.html" %}
 {% load static %}
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="{% static 'potlucks/forms.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'potlucks/main.css' %}">
-<div class="main">
+<div class="container" style="padding-top: 70px">
 <h1>Please enter event credentials</h1>
 
 <!--Check for error message and display-->
