--- a/luckyfeast/potlucks/templates/potlucks/desktop/event_index.html
+++ b/luckyfeast/potlucks/templates/potlucks/desktop/event_index.html
@@ -1,20 +1,24 @@
 {% include "potlucks/navbar.html" %}
 {% load static %}
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href='{% static "potlucks/main.css" %}'>
 <link rel="stylesheet" type="text/css" href='{% static "potlucks/table-list.css" %}'>
 
-<div class="main">
+<div class="container-fluid" style="padding-top: 70px;">
 <h1>My Events</h1>
 
 <!--Make table for hosted events-->
-<div class="table-list" id="hosted_table" style="float: left; width: 50%;">
+<div class="row">
+<div class="col-sm-6">
+<div class="table-list" id="hosted_table">
 <h2>Events that I am hosting:</h2>
 <table>
 <tr><th>Event Name</th><th>Event Start</th><th>Event End</th></tr>
 {% for event in event_list %}
     <tr><td>{{ event.name }}</a></td>
         <td>{{ event.start_time }}</td>
-        <td>{{ event.end_time }}</td>
         <td><form action="{% url 'potlucks:event_details' %}" method="POST">
             {% csrf_token %}
             <input type="hidden" name="event_id" value="{{ event.pk }}" />
@@ -22,16 +26,17 @@
 {% endfor %}
 </table>
 </div>
+</div>
 
 <!--Make second table for invited events-->
-<div class="table-list" id="invited-table" style="float: left; top: 30px; width: 50%; ">
+<div class="col-sm-6">
+<div class="table-list" id="invited-table">
 <h2>Events that I am invited to:</h2>
 <table>
 <tr><th>Event Name</th><th>Event Start</th><th>Event End</th></tr>
 {% for instance in invited_list %}
     <tr><td>{{ instance.event.name }}</a></td>
         <td>{{ instance.event.start_time }}</td>
-        <td>{{ instance.event.end_time }}</td>
         <td><form action="{% url 'potlucks:event_details' %}" method="POST">
             {% csrf_token %}
             <input type="hidden" name="event_id" value="{{ instance.event.pk }}" />
@@ -39,5 +44,6 @@
 {% endfor %}
 </table>
 </div>
-
+</div>
+</div>
 </div>
