--- a/luckyfeast/potlucks/templates/potlucks/desktop/user_register.html
+++ b/luckyfeast/potlucks/templates/potlucks/desktop/user_register.html
@@ -1,9 +1,12 @@
 {% include "potlucks/navbar.html" %}
 {% load static %}
 <html>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="{% static 'potlucks/forms.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'potlucks/main.css' %}">
-<div class="main">
+<div class="container" style="padding-top: 70px">
 <h1>Create an Account</h1>
 {% if help_message %}a
 <p><strong>{{ help_message }}</strong></p>
