--- a/luckyfeast/potlucks/templates/potlucks/desktop/index.html
+++ b/luckyfeast/potlucks/templates/potlucks/desktop/index.html
@@ -1,5 +1,13 @@
 {% include "potlucks/navbar.html" %}
 {% load static %}
-<div class="main">
-<h1>{{ browser }}</h1>
+<html>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<div class="container" style="padding-top: 70px">
+<h1>Welcome to Lucky Feast!</h1>
+<p>This page is a work-in-progress.</p>
+<br>
+<p>This app is managed and developed by Sean Rossi</p>
 </div>
+</html>
