--- a/luckyfeast/potlucks/templates/potlucks/navbar.html
+++ b/luckyfeast/potlucks/templates/potlucks/navbar.html
@@ -1,22 +1,28 @@
 <html>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+</head>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-<nav class="navbar navbar-inverse navbar-fixed-top">
+<nav class="navbar navbar-inverse navbar-fixed-top" style="color:white; background-color:green;">
+<style>
+nav .navbar-nav li a{ color: white !important; font-weight: bold; }
+nav .navbar-nav li a:hover{ background-color: grey !important; }
+</style>
   <div class="container-fluid">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+      <button type="button" class="navbar-toggle" style="border:none;" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{% url 'potlucks:event_index' %}">Lucky Feast</a>
+      <a class="navbar-brand" style="color:white; font-weight:bold; font-style:italic;" href="{% url 'potlucks:event_index' %}">Lucky Feast</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav">
+      <ul class="nav navbar-nav" style="color:white;">
         <li><a href='{% url 'potlucks:event_index' %}'>My Events</a></li>
         <li><a href='{% url 'potlucks:create_event' %}'>Create Event</a></li>
         <li><a href='{% url 'potlucks:event_from_key' %}'>Find Event</a></li>
@@ -24,13 +30,13 @@
       </ul>   
       {% if request.user.is_authenticated %}
       <ul class="nav navbar-nav navbar-right">
-        <li><a href='{% url 'potlucks:user_logout' %}'>Logout</a></li>
-        <li><a href='{% url 'potlucks:user_profile' %}'>{{ request.user.username }}</a></li>
+        <li><a href='{% url 'potlucks:user_profile' %}'><span class="glyphicon glyphicon-user"><b>{{ request.user.username }}</b></span></a></li>
+        <li><a href='{% url 'potlucks:user_logout' %}'><span class="glyphicon glyphicon-log-out"><b>Logout</b></span></a></li>
       </ul>
       {% else %}
       <ul class="nav navbar-nav navbar-right">
-        <li><a href='{% url 'potlucks:user_register' %}'><span class="glyphicon glyphicon-user">SignUp</span></a></li>
-        <li><a href='{% url 'potlucks:user_login' %}'><span class="glyphicon glyphicon-log-in">Login</span></a></li>
+        <li><a href='{% url 'potlucks:user_register' %}'><span class="glyphicon glyphicon-user"><b>SignUp</b></span></a></li>
+        <li><a href='{% url 'potlucks:user_login' %}'><span class="glyphicon glyphicon-log-in"><b>Login</b></span></a></li>
       </ul>
       {% endif %}
     </div>
