--- a/luckyfeast/potlucks/templates/potlucks/desktop/create_event.html
+++ b/luckyfeast/potlucks/templates/potlucks/desktop/create_event.html
@@ -1,10 +1,16 @@
 {% include "potlucks/navbar.html" %}
 {% load static %}
+<head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+<link rel="stylesheet" href="/resources/demos/style.css">
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="{% static 'potlucks/forms.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'potlucks/main.css' %}">
+</head>
+<body>
 <div class="container" style="padding-top: 70px">
 <h1>This is the event creation page</h1>
 
@@ -21,40 +27,12 @@
 
     <li><b>Start Date:</b><br>
     <input type="text" name="start_date"  id="startDate" required />
-    <select name="startHour">
-      {% for h in hours %}
-        <option value="{{ h }}">{{ h }}</option>
-      {% endfor %}
-    </select>
-    <select name="startMinute">
-        <option value="0">:00</option>
-        <option value="15">:15</option>
-        <option value="30">:30</option>
-        <option value="45">:45</option>
-    </select>
-    <select name="startAm">
-      <option value="am">AM</option>
-      <option value="pm">PM</option>
-    </select>
+    <input type="text" name="start_time" class="timepicker" id="startTime"/>
     </li>
     
     <li><b>End Date:</b><br>
     <input type="text" name="end_date"  id="endDate" required />
-    <select name="endHour">
-      {% for h in hours %}
-        <option value="{{ h }}">{{ h }}</option>
-      {% endfor %}
-    </select>
-    <select name="endMinute">
-        <option value="0">:00</option>
-        <option value="15">:15</option>
-        <option value="30">:30</option>
-        <option value="45">:45</option>
-    </select>
-    <select name="endAm">
-      <option value="am">AM</option>
-      <option value="pm">PM</option>
-    </select>
+    <input type="text" name="end_time" class="timepicker" id="endTime"/>
     </li>
 
     <li><b>Address:</b><br>
@@ -77,14 +55,15 @@
 </form>
 </div>
 </div>
-<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-<link rel="stylesheet" href="/resources/demos/style.css">
-<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
+</body>
 <script>
 $(document).ready(function()
 {
     $("#startDate").datepicker();
     $("#endDate").datepicker();
+    $('input.timepicker').timepicker({});
 });
 </script>
