--- a/luckyfeast/potlucks/templates/potlucks/desktop/event_from_key.html
+++ b/luckyfeast/potlucks/templates/potlucks/desktop/event_from_key.html
@@ -5,9 +5,13 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="{% static 'potlucks/forms.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'potlucks/main.css' %}">
-<div class="container" style="padding-top: 70px">
+<div class="container main">
+<div class="row">
+  <div class="text-center">
 <h1>Please enter event credentials</h1>
-
+</div></div>
+<div class="row">
+  <div class="col-sm-4 col-sm-offset-4">
 <!--Check for error message and display-->
 {% if error_message %}
 <p><strong>{{ error_message }}</strong></p>
@@ -24,5 +28,7 @@
     <li><input type="submit" value="Login" /></li>
 </ul>
 </form>
+</div>
+</div>
 </div>
 </div>
