--- a/luckyfeast/potlucks/templates/potlucks/desktop/event_index.html
+++ b/luckyfeast/potlucks/templates/potlucks/desktop/event_index.html
@@ -6,23 +6,24 @@
 <link rel="stylesheet" type="text/css" href='{% static "potlucks/main.css" %}'>
 <link rel="stylesheet" type="text/css" href='{% static "potlucks/table-list.css" %}'>
 
-<div class="container" style="padding-top: 70px;">
+<div class="container main">
 <h1>My Events</h1>
 
 <!--Make table for hosted events-->
 <div class="col-sm-6">
   <h2>Events I'm hosting:</h2>
-  <div class="row">
-    {% for event in event_list %}
-    <div class="col-sm-6 col-xs-12" style="background-color:aquamarine; display:inline-block;" style="cursor:pointer !important;" onclick="loadEvent('{{ event.pk }}');">
-    <h3>{{ event.name }}</h3>
-      <div class="row">
-        <div class="col-xs-6"><h5>{{ event.start_time }}</h5></div>
-        <div class="col-xs-6"><h5>{{ event.rsvp_count }} Guests Confirmed</h5></div>
+  {% for event in event_list %}
+    <div class="row">
+      <div class="col-sm-6 col-xs-12" style="background-color:aquamarine; display:inline-block;" style="cursor:pointer !important;" onclick="loadEvent('{{ event.pk }}');">
+      <h3>{{ event.name }}</h3>
+        <div class="row">
+          <div class="col-xs-6"><h5>{{ event.start_time }}</h5></div>
+          <div class="col-xs-6"><h5>{{ event.rsvp_count }} Guests Confirmed</h5></div>
+        </div>
       </div>
-    </div>
-    {% endfor %}
   </div>
+  <br>
+  {% endfor %}
 </div>
 
 <!--Make second table for invited events-->
