--- a/luckyfeast/potlucks/templates/potlucks/desktop/user_login.html
+++ b/luckyfeast/potlucks/templates/potlucks/desktop/user_login.html
@@ -12,7 +12,7 @@
 }
 </style>
 
-<div class="container" style="padding-top: 70px;">
+<div class="container main">
 <!--Check for error message and display-->
 {% if error_message %}
 <p><strong>{{ error_message }}</strong></p>
