--- a/luckyfeast/potlucks/templates/potlucks/desktop/user_profile.html
+++ b/luckyfeast/potlucks/templates/potlucks/desktop/user_profile.html
@@ -1,10 +1,13 @@
-{% load static %}
 {% include "potlucks/navbar.html" %}
-<link rel="stylesheet" type="text/css" href="{% static 'potlucks/main.css' %}">
+{% load static %}
 <html>
-<div class="main">
-<h1>This is the profile of {{ request.user.username }}</h1>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="{% static 'potlucks/main.css' %}">
+<div class="container main">
+<div class="row">
+<h1>{{ request.user.username }}'s Profile</h1>
 </div>
-
-
+</div>
 </html>
